--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main id="content">
         <section>
             <h1>JJ's Homepage</h1>
-            <img id="selfie" src="img/image.jpg">
+            <img class="selfie" src="img/image.jpg">
             <div class="minor-section">
                 <h2>Welcome to my page</h2>
                 <p>My name is JJ. I like viedo games, so I added tetris and snake. Have fun!</p>
@@ -69,7 +69,7 @@
     </main>
 
     <script>
-        // Snake Game Code
+        // Snake Game Code - Worked with AI to get this
         const snakeCanvas = document.getElementById('snakeCanvas');
         const snakeCtx = snakeCanvas.getContext('2d');
         const snakeCurrentScoreElement = document.getElementById('snakeCurrentScore');
@@ -230,7 +230,7 @@
             updateSnakeScore();
         }
 
-        // Tetris Game Code
+        // Tetris Game Code - Worked with AI to get this
         const tetrisCanvas = document.getElementById('tetrisCanvas');
         const tetrisCtx = tetrisCanvas.getContext('2d');
         const tetrisCurrentScoreElement = document.getElementById('tetrisCurrentScore');
