--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <main id="content">
         <section>
-            <h1>JJ's Homepage</h1>
-            <img class="selfie" src="img/image.jpg">
+            <h1><img class="selfie" src="img/image.jpg"> JJ's Homepage </h1>
+            
             <div class="minor-section">
                 <h2>Welcome to my page</h2>
                 <p>My name is JJ. I like viedo games, so I added tetris and snake. Have fun!</p>
