--- a/lab3/index.html
+++ b/lab3/index.html
@@ -23,25 +23,29 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
+			<h1>Lab 3 - File Structures</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+					<p>Establish a local file structure and create an interesting webpage that shows all of my labs.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
+					<p>Putting both tetris and snake in the same script is too much, next time I should split it up into different scripts to make it easier to manage. </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p>I added in tetris and snake on the home screen, which was super fun to implement and learn how Javascript works in combination with html and css to make full video games.</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
-					<div id="output"></div>
+					<p>Here is the file structure I created, as well as images of tetris and snake.</p>
+					<img class="imgs" id="file_structure_image" src="img/filestructure.png">
+					<img class="imgs" id="snake_image" src="img/snake.png">
+					<img class="imgs" id="tetris image" src="img/tetris.png">
+					<div class="imgs" id="output"></div>
 			</div>
 		</section>
 		<nav id="links">
