--- a/lab6/index.html
+++ b/lab6/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 6 - Objects</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -23,10 +23,10 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
+			<h1>Lab 6 - Objects</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+					<p>Create Objects in javascript.</p>
 			</div>
 
 			<div class="minor-section">
@@ -40,8 +40,9 @@
 			</div>
 
 			<div class="minor-section">
-					<h2>Results</h2>
-					<div id="output"></div>
+					<h2>Results: </h2>
+					<script src="js/lab.js"></script>
+					<img src="img/images.jpg">
 			</div>
 		</section>
 		<nav id="links">
