--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
                             <li><a href="lab2/index.html">Lab 2: Hello World</a></li>
                             <li><a href="lab3/index.html">Lab 3: File Structure and Video Games</a></li>
                             <li><a href="lab4/index.html">Lab 4: File Transfer</a></li>
-                            <li><a href="lab5/index.html">Lab 5:</a></li>
-                            <li><a href="lab6/index.html">Lab 6:</a></li>
+                            <li><a href="lab5/index.html">Lab 5: Cool Stuff</a></li>
+                            <li><a href="lab6/index.html">Lab 6: More Cool Stuff</a></li>
+                            <li><a href="lab7/index.html">Lab 7: Functions</a></li>
                         </ul>
                     </div>
                 </section>
