--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
                             <li><a href="lab5/index.html">Lab 5: Cool Stuff</a></li>
                             <li><a href="lab6/index.html">Lab 6: More Cool Stuff</a></li>
                             <li><a href="lab7/index.html">Lab 7: Functions</a></li>
+                            <li><a href="lab8/index.html">Lab 8: Callbacks</a></li>
+                            <li><a href="lab9/index.html">Lab 9: Functions</a></li>
                         </ul>
                     </div>
                 </section>
