--- a/lab8/index.html
+++ b/lab8/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Lab 8 - Callbacks</title>git
+    <title>Lab 8 - Callbacks</title>
     <link rel="stylesheet" type="text/css" href="css/lab.css">
     <script src="js/lab8.js" defer></script>
 </head>
