--- a/lab9/index.html
+++ b/lab9/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Lab 9 - Callbacks</title>
+    <title>Lab 9 - jquery</title>
     <link rel="stylesheet" type="text/css" href="css/lab.css">
     <script src="js/lab9.js" defer></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
@@ -9,7 +9,7 @@
 <body>
     <main id="content">
         <section>
-            <h1>Lab 8 - Callbacks</h1>
+            <h1>Lab 9 - jquery</h1>
             <div id="challenge" class="minor-section">
                 <h2>Challenge</h2>
                 <p>Experimenting with anonymous functions and callbacks.</p>
