--- a/lab10/index.html
+++ b/lab10/index.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Lab 7 - Functions</title>git
+    <title>Lab 10 - JS for the web</title>
     <link rel="stylesheet" type="text/css" href="css/lab.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="js/lab10.js" defer></script>
 </head>
 <body>
     <main id="content">
         <section>
-            <h1>Lab 7 - Functions</h1>
-            <div class="minor-section">
+            <h1>Lab 10 - JS for the web</h1>
+            <div id="challenge" class="minor-section">
                 <h2>Challenge</h2>
-                <p>Using functions in JS.</p>
+                <p>Implementing JS for the web.</p>
             </div>
 
-            <div class="minor-section">
+            <div id="problems" class="minor-section">
                 <h2>Problems</h2>
                 <p>What problems arose? How did you solve them? </p>
             </div>
 
-            <div class="minor-section">
+            <div id="reflection" class="minor-section">
                 <h2>Reflection</h2>
                 <p> I was super swamped with work and other obligations, ended up submitting this assignment a few days late.</p>
             </div>
 
-            <div class="minor-section">
-                <h2>Results:</h2>
-                <div id="sortedNameDisplay"></div>
-                <script src="js/lab7.js"></script>
+            <div id="output">
+                <button id="make-convo">Hello friend</button>
             </div>
         </section>
         <nav id="links">
