--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
                             <li><a href="lab7/index.html">Lab 7: Functions</a></li>
                             <li><a href="lab8/index.html">Lab 8: Callbacks</a></li>
                             <li><a href="lab9/index.html">Lab 9: Functions</a></li>
+                            <li><a href="lab10/index.html">Lab 10: JS for the web</a></li>
+                            <li><a href="lab11/index.html">Lab 11: Events</a></li>
                         </ul>
                     </div>
                 </section>
