--- a/lab12/index.html
+++ b/lab12/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Lab 11 - Events</title>
+    <title>Lab 12 - Conditionals</title>
     <link rel="stylesheet" type="text/css" href="css/lab.css">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="js/lab11.js" defer></script>
+    <script src="js/lab12.js" defer></script>
 </head>
 <body>
     <main id="content">
         <section>
-            <h1>Lab 11 - Events</h1>
+            <h1>Lab 12 - Conditionals</h1>
             <div id="challenge" class="minor-section">
                 <h2>Challenge</h2>
                 <p>Implementing JS for the web.</p>
@@ -22,12 +22,13 @@
 
             <div id="reflection" class="minor-section">
                 <h2>Reflection</h2>
-                <p> I was super swamped with work and other obligations, ended up submitting this assignment a few days late.</p>
+                <p> Cool assignment</p>
             </div>
 
             <!-- Input field for the name -->
-            <input type="text" id="user-name" placeholder="Input your name">
-            <button id="submit">Submit</button>
+            Please enter your name for sorting
+            <input type="text"  id="input">
+            <button id="button">Enter</button>
 
             <div id="output"></div>
         </section>
