--- a/lab12/index.html
+++ b/lab12/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab 12 - Conditionals</title>
     <link rel="stylesheet" type="text/css" href="css/lab.css">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
@@ -17,17 +19,17 @@
 
             <div id="problems" class="minor-section">
                 <h2>Problems</h2>
-                <p>What problems arose? How did you solve them? </p>
+                <p>What problems arose? How did you solve them?</p>
             </div>
 
             <div id="reflection" class="minor-section">
                 <h2>Reflection</h2>
-                <p> Cool assignment</p>
+                <p>Cool assignment</p>
             </div>
 
             <!-- Input field for the name -->
-            Please enter your name for sorting
-            <input type="text"  id="input">
+            <p>Please enter your name for sorting:</p>
+            <input type="text" id="input" placeholder="Enter your name">
             <button id="button">Enter</button>
 
             <div id="output"></div>
