--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                             <li><a href="lab10/index.html">Lab 10: JS for the web</a></li>
                             <li><a href="lab11/index.html">Lab 11: Events</a></li>
                             <li><a href="lab12/index.html">Lab 12: Conditionals</a></li>
+                            <li><a href="lab12/index.html">Lab 13: Loops</a></li>
                         </ul>
                     </div>
                 </section>
