--- a/lab3/index.html
+++ b/lab3/index.html
@@ -24,6 +24,9 @@
 	<main id="content">
 		<section>
 			<h1>Lab 3 - File Structures</h1>
+			<div style="position: absolute; top: 0; right: 0; background: lightblue; padding: 10px;">
+                <a href="../index.html">get me out of here</a>
+            </div>
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>Establish a local file structure and create an interesting webpage that shows all of my labs.</p>
