--- a/lab4/index.html
+++ b/lab4/index.html
@@ -24,6 +24,9 @@
 	<main id="content">
 		<section>
 			<h1>Lab 4 - Pseudocoding and Problem Solving</h1>
+			<div style="position: absolute; top: 0; right: 0; background: lightblue; padding: 10px;">
+                <a href="../index.html">get me out of here</a>
+            </div>
 			<div class="minor-section">
 				<h2>Pseudocode for making eggs</h2>
 				<p>1. get a pan, put it on the stove and turn it on</p>
