--- a/lab11/index.html
+++ b/lab11/index.html
@@ -10,6 +10,9 @@
     <main id="content">
         <section>
             <h1>Lab 11 - Events</h1>
+            <div style="position: absolute; top: 0; right: 0; background: lightblue; padding: 10px;">
+                <a href="../index.html">get me out of here</a>
+            </div>
             <div id="challenge" class="minor-section">
                 <h2>Challenge</h2>
                 <p>Implementing JS for the web.</p>
