--- a/lab2/index.html
+++ b/lab2/index.html
@@ -28,6 +28,9 @@
 <body>
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
+		<div style="position: absolute; top: 0; right: 0; background: lightblue; padding: 10px;">
+			<a href="../index.html">get me out of here</a>
+		</div>
 		<section>
 			
 			<h1> <img src="img/adele.jpg"> Hello <img src="img/adele.jpg"> Hello <img src="img/adele.jpg"> Hello <img src="img/adele.jpg"> Hello <img src="img/adele.jpg"> Hello <img src="img/adele.jpg"></h1> 
