--- a/lab5/index.html
+++ b/lab5/index.html
@@ -24,6 +24,9 @@
 	<main id="content">
 		<section>
 			<h1>Lab 5 - Data Types and Variables</h1>
+			<div style="position: absolute; top: 0; right: 0; background: lightblue; padding: 10px;">
+                <a href="../index.html">get me out of here</a>
+            </div>
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>Data type and variables</p>
