--- a/lab8/index.html
+++ b/lab8/index.html
@@ -9,6 +9,9 @@
     <main id="content">
         <section>
             <h1>Lab 8 - Callbacks</h1>
+            <div style="position: absolute; top: 0; right: 0; background: lightblue; padding: 10px;">
+                <a href="../index.html">get me out of here</a>
+            </div>
             <div class="minor-section">
                 <h2>Challenge</h2>
                 <p>Experimenting with anonymous functions and callbacks.</p>
